<resources>
    <string name="app_name">My Application</string>
    <string name="select_semester">Select Semester</string>
    <string name="sem_1">sem_1</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="signup">signup</string>
    <string name="semester">Semester</string>
    <string name="communicate">Communicate</string>
    <string name="share">share</string>
    <string name="send">send</string>
    <string name="login">login</string>

    <string name="sign_up">sign Up</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>

    <string-array name="subject">
        <item>User login</item>
        <item>Admin login</item>
    </string-array>
    <string-array name="subject1">
        <item>Android</item>
        <item>Machine Learing</item>
    </string-array>

    <string-array name="subject2">
        <item>Android</item>
        <item>Machine Learing</item>
    </string-array>
    <string-array name="subject4">
        <item>Android</item>
        <item>Machine Learing</item>
    </string-array>
    <string-array name="numbers">
        <item>Android</item>
        <item>Machine Learing</item>
    </string-array>
    <string-array name="numbers1">
        <item>IOT</item>
        <item>SC</item>
    </string-array>
    <string name="facebook_app_id">2234223170219693</string>
    <string name="fb_login_protocol_scheme">fb2234223170219693</string>
</resources>
