<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:background="@drawable/index"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:text="Welcome...."
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="55dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/button2"
            android:drawableStart="@drawable/ic_signin"
            android:fontFamily="sans-serif-condensed"
            android:onClick="btn_button1"
            android:text="@string/login"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="20sp" />

        <Button
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button3"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/sign_up"
            android:onClick="btn_button3"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="20sp" />




    </LinearLayout>

</RelativeLayout>